--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,22 @@
 
   <body>
     <div id="container">
-      <h1>{{ site.title }}</h1>
-      <hr>
+      <div id="header">
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      </div>
+
+      <div id="nav">
+        <ul>
+          <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
+        </ul>
+      </div>
 
       <div id="content">
-      <h2>{{ page.title | default: site.title }}</h2>
+      <h2>{{ page.title | default: Untitled }}</h2>
         {{ content }}
+      </div>
+
+      <div id="footer">
       </div>
 
     </div>
