--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
       </div>
 
       <div id="nav">
+        <h2>Navigation</h2>
         <ul>
           <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
         </ul>
