--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   line-height: 2em;
   font-size: 1.8em;
   font-weight: normal;
-  font-family: "Verdana", sans-serif;
+  font-family: sans-serif;
 }
 
 #header a {
@@ -47,7 +47,7 @@ body {
 }
 
 #nav ul, #nav h2 {
-  font-family: "Verdana", sans-serif;
+  font-family: sans-serif;
   font-size: 0.875em;
   line-height: 1em;
   color: darkgray;
@@ -60,7 +60,7 @@ body {
 
   padding: 1em;
 
-  font-family: "Verdana", sans-serif;
+  font-family: sans-serif;
 
   background: #fff;
   border-left: 1px solid dimgray;
@@ -156,12 +156,30 @@ code {
   background: antiquewhite;
 }
 
+#markdown-toc {
+  font-size: 0.875em;
+  border: 1px solid darkgray;
+  border-top-width: 0.5em;
+  color: darkgray;
+  background: aliceblue;
+  padding: 0.5em 1em 1em 2.5em;
+}
+  
+#markdown-toc {
+  float: right;
+  margin-left: 1em;
+}
+
+#markdown-toc li {
+  margin: 0;
+}
+
 #footer {
   margin-bottom: 6em;
   margin-left: 160px;
 
   padding: 1em;
-  font-family: "Verdana", sans-serif;
+  font-family: sans-serif;
 }
 
 #footer p, #footer li {
