--- a/style.css
+++ b/style.css
@@ -160,7 +160,6 @@ code {
   font-size: 0.875em;
   border: 1px solid darkgray;
   border-top-width: 0.5em;
-  color: darkgray;
   background: aliceblue;
   padding: 0.5em 1em 1em 2.5em;
 }
@@ -168,6 +167,16 @@ code {
 #markdown-toc {
   float: right;
   margin-left: 1em;
+}
+
+#markdown-toc.thin {
+  float: right;
+  margin-left: 1em;
+}
+
+#markdown-toc.wide {
+  float: unset;
+  margin-left: 0;
 }
 
 #markdown-toc li {
