--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,8 +9,8 @@ layout: default
 
 <ul>
   {% for post in sortedPosts %}
-    {% if site.categories contains page.category %}
-      {% if site.categories.size == 1 %}
+    {% if post.categories contains page.category %}
+      {% if post.categories.size == 1 %}
   <li><a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endif %}
     {% endif %}
@@ -23,8 +23,8 @@ layout: default
 
 <ul>
   {% for post in sortedPosts %}
-    {% if site.categories contains page.category %}
-      {% if site.categories contains subcategory %}
+    {% if post.categories contains page.category %}
+      {% if post.categories contains subcategory %}
   <li><a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endif %}
     {% endif %}
