--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
         <h2>Navigation</h2>
         <ul>
           <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
+          <li><a href="{{ "/rpgs/" | absolute_url }}">RPGs</a></li>
         </ul>
       </div>
 
