--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,16 +9,16 @@ layout: default
 
 <ul>
 {% for post in site.posts limit:10 %}
-  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.date | date_to_string | prepend: " (" | append: ") " | default: "" }}</li>
+  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} </li>
 {% endfor %}
 </ul>
 
 <h2>Recently updated</h2>
 
 <ul>
-{% assign sortedPosts = site.posts | sort: 'updated' %}
+{% assign sortedPosts = site.posts limit:10 | sort: 'updated' %}
 {% for post in sortedPosts limit:10 %}
-  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.updated | date_to_string | prepend: " (" | append: ") " | default: "" }}</li>
+  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} </li>
 {% endfor %}
 </ul>
 
