--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,7 +16,7 @@ layout: default
 <h2>Recently updated</h2>
 
 <ul>
-{% assign sortedPosts = site.posts limit:10 | sort: 'updated' %}
+{% assign sortedPosts = site.posts | sort: 'updated' %}
 {% for post in sortedPosts limit:10 %}
   <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} </li>
 {% endfor %}
