--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <ul>
 {% for post in site.posts limit:10 %}
-  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} </li>
+  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }}  &mdash; {{ post.date | date_to_string }}</li>
 {% endfor %}
 </ul>
 
@@ -18,7 +18,9 @@ layout: default
 <ul>
 {% assign sortedPosts = site.posts | sort: 'updated' %}
 {% for post in sortedPosts limit:10 %}
-  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} </li>
+{% if post.updated %}
+  <li><a href="{{post.url}}">{{post.title}}</a> {{ post.categories | default: "" | join: "/" | prepend: " (" | append: ") " }} &mdash; {{ post.updated | date_to_string }}</li>
+{% endif %}
 {% endfor %}
 </ul>
 
