--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -27,5 +27,5 @@ layout: default
 <h2>Categories</h2>
 
 <ul>
-  <li><a href="/rpg/">Roleplaying games</li>
+  <li><a href="/rpg/">Roleplaying games</a></li>
 </ul>
