Add games category

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <ul>
           <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
           <li><a href="{{ "/rpg/" | absolute_url }}">RPGs</a></li>
+          <li><a href="{{ "/games/" | absolute_url }}">Games</a></li>
         </ul>
       </div>
 
