--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -29,4 +29,5 @@ layout: default
 <ul>
   <li><a href="/rpg/">Roleplaying games</a></li>
   <li><a href="/games/">Video games</a></li>
+  <li><a href="/tv/">Television</a></li>
 </ul>
