--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
           <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
           <li><a href="{{ "/rpg/" | absolute_url }}">RPGs</a></li>
           <li><a href="{{ "/games/" | absolute_url }}">Games</a></li>
+          <li><a href="{{ "/tv/" | absolute_url }}">TV</a></li>
         </ul>
       </div>
 
