--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -11,7 +11,11 @@ layout: default
   {% for post in sortedPosts %}
     {% if post.categories contains page.category %}
       {% if post.categories.size == 1 %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  <li><a href="{{ post.url }}">{{ post.title }}</a>
+  {% if post.updated %}&mdash; Updated: {{ post.updated | date_to_string }}
+  {% else %}&mdash; {{ post.date | date_to_string }}
+  {% endif %}
+  </li>
       {% endif %}
     {% endif %}
   {% endfor %}
@@ -25,7 +29,11 @@ layout: default
   {% for post in sortedPosts %}
     {% if post.categories contains page.category %}
       {% if post.categories contains subcategory.slug %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  <li><a href="{{ post.url }}">{{ post.title }}</a>
+  {% if post.updated %}&mdash; Updated: {{ post.updated | date_to_string }}
+  {% else %}&mdash; {{ post.date | date_to_string }}
+  {% endif %}
+  </li>
       {% endif %}
     {% endif %}
   {% endfor %}
