Added computing category

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
         <h2>Navigation</h2>
         <ul>
           <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
-          <li><a href="{{ "/rpg/" | absolute_url }}">RPGs</a></li>
+          <li><a href="{{ "/comp/" | absolute_url }}">Computing</a></li>
           <li><a href="{{ "/games/" | absolute_url }}">Games</a></li>
+          <li><a href="{{ "/rpg/" | absolute_url }}">RPGs</a></li>
           <li><a href="{{ "/tv/" | absolute_url }}">TV</a></li>
         </ul>
       </div>
