--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{{ "style.css" | absolute_url }}">
     <meta charset="utf-8">
     {% feed_meta %}
+    {% if page.description %}<meta name="description" content="{{ page.description }}"> {% endif %}
   </head>
 
   <body>
@@ -13,21 +14,14 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       </div>
 
-      <div id="nav">
-        <h2>Navigation</h2>
-        <ul>
-          <li><a href="{{ "/" | absolute_url }}">Main Page</a></li>
-          <li><a href="{{ "/comp/" | absolute_url }}">Computing</a></li>
-          <li><a href="{{ "/games/" | absolute_url }}">Games</a></li>
-          <li><a href="{{ "/rpg/" | absolute_url }}">RPGs</a></li>
-          <li><a href="{{ "/tv/" | absolute_url }}">TV</a></li>
-        </ul>
-      </div>
+{% include navigation.html %}
 
       <div id="content">
       <h1>{{ page.title | default: Untitled }}</h1>
         {{ content }}
       </div>
+
+{% include navigation.html %}
 
       <div id="footer">
       <p>
