--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
   display: block;
 }
 
+#header a:hover {
+  color: white;
+}
+
 #nav {
   background: indigo;
   overflow: hidden;
@@ -65,6 +69,11 @@ body {
   font-family: sans-serif;
   font-size: 1em;
   line-height: 1.5em;
+}
+
+#nav li a:active; #nav li a:hover {
+  border-style: inset;
+  color: #cca9dc;
 }
 
 #content {
