--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
       <p>
       {% if page.date %} Page created: {{ page.date | date_to_long_string }}. {% endif %}
       {% if page.updated %} Last updated: {{ page.updated | date_to_long_string }}. {% endif %}
-      <a href="#">Back to top &#x21E4</a> <img src="http://www.free-website-hit-counter.com/c.php?d=6&id=107279&s=16" title="free website hit counter">
+      <a href="#">Back to top &#x21E4</a> <img src="http://www.free-website-hit-counter.com/c.php?d=6&id=107279&s=16" title="free website hit counter" class="hitcounter" alt="hitcounter">
       </p>
       </div>
 
