--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,10 +2,11 @@
       <div id="nav">
         <h2>Navigation</h2>
         <ul>
-          <li><a href="{{ "/" | absolute_url }}" title="Main Page">Home</a></li>
+<!--          <li><a href="{{ "/" | absolute_url }}" title="Main Page">Home</a></li>-->
           <li><a href="{{ "/comp/" | absolute_url }}" title="Articles on computing">Computing</a></li>
           <li><a href="{{ "/games/" | absolute_url }}" title="Articles on video games">Games</a></li>
           <li><a href="{{ "/rpg/" | absolute_url }}" title="Articles on roleplaying games">RPGs</a></li>
           <li><a href="{{ "/tv/" | absolute_url }}" title="Articles on television">TV</a></li>
+          <li><a href="{{ "/etc/" | absolute_url }}" title="Other pages">Other</a></li>
         </ul>
       </div>
