--- a/style.css
+++ b/style.css
@@ -168,11 +168,18 @@ body {
 
 #content table {
   border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#content th {
+  background-color: darkgray;
 }
 
 #content th, #content td {
   border: 1px solid darkgray;
   padding: 0.5em;
+  font-size: 0.875em;
 }
 
 #content dt {
