--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 {% include navigation.html %}
 
       <div id="content">
-      <h1>{{ page.title | default: Untitled }}</h1>
+      {% if page.title %}<h1>{{ page.title | default: Untitled }}</h1>{% endif %}
         {{ content }}
       </div>
 
