Minor style fix

--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ body {
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
+
+  background-color: #fff;
 }
 
 #content th {
