--- a/style.css
+++ b/style.css
@@ -175,12 +175,12 @@ body {
 }
 
 #content th {
-  background-color: darkgray;
+  background-color: gainsboro;
 }
 
 #content th, #content td {
   border: 1px solid darkgray;
-  padding: 0.5em;
+  padding: 0.2em 0.5em;
   font-size: 0.875em;
 }
 
