--- a/style.css
+++ b/style.css
@@ -1,272 +1,255 @@
+/* New dark theme created in 2023 */
+/* We don't have flying cars, but we have dark themes. */
 body {
-  margin: 0;
-  padding: 0;
-
-  background: gainsboro;
-}
-
-#container {
-  margin: 0 auto;
-  max-width: 960px;
-}
-
-#header {
-  background: indigo url(/img/orbital-64px.png) 16px no-repeat;
-  height: 64px;
-  color: white;
-  overflow: hidden;
-  padding-left: 1em;
-}
-
-#header h1 {
-  height: 1em;
-  line-height: 1em;
-  font-size: 1.8em;
-  font-weight: normal;
-  font-family: sans-serif;
-  padding-left: 96px;
-}
-
-#header a {
-  text-decoration: none;
+  background: #1b1b2f;
   color: lightsteelblue;
-  display: block;
-}
 
-#header a:hover {
-  color: white;
-}
-
-#nav {
-  background: indigo;
-  overflow: hidden;
-}
-
-#nav ul {
-  list-style: none; 
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  
-  overflow: hidden;
-}
-
-#nav h2 {
-  display: none;
-}
-
-#nav li {
-  float: left;
-  width: 20%;
-  min-width: 100px;
-  text-align: center;
-}
-
-#nav li a {
-  display: block;
-  background: indigo;
-  color: white;
-  border: 2px outset indigo;  
-  text-decoration: none;
   font-family: sans-serif;
   font-size: 1em;
+
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: white;
+}
+
+a:visited {
+  color: #bababa;
+}
+
+header {
+  background: indigo;
+}
+
+header nav, header h1, main, footer {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+header h1 {
+  font-weight: normal;
+  margin 0;
+  padding: 0;
+
+  height: 64px;
+  line-height: 64px;
+
+  background: url(../orbital-64px.png) no-repeat transparent;
+}
+
+header h1 a {
+  color: lightsteelblue;
+  background: -webkit-linear-gradient(90deg, slategray, lightsteelblue 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  font-weight: normal;
+  text-decoration: none;
+
+  padding-left: 80px;
+}
+
+header h1 a:hover {
+  background: none;
+  -webkit-background-clip: unset;
+  -webkit-text-fill-color: unset;
+  color: white;
+}
+
+nav {
+  padding: 0;
+  overflow: hidden;
+}
+
+nav ul, footer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: flex;
+  overflow: hidden;
+}
+
+nav ul li, footer ul li {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  list-style: none;
+  text-align: center;
+  flex: 1;
+}
+
+nav ul li:hover {
+  background-color: rgba(255,255,255,0.2);
+}
+
+nav ul li a {
+  display: block;
+  box-sizing: border-box;
+  padding: 0.4em;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: underline;
+/* text-transform: lowercase; */
+}
+
+nav ul li a:before {
+  color: lightsteelblue;
+}
+
+@media screen and (max-width: 600px) {
+  nav ul, nav li {
+    display: inline;
+    flex: unset;
+  }
+}
+
+main {
+  padding: 0 2em;
+}
+
+main h1 {
+  color: white;
+  font-weight: bold;
+  font-size: 1.7em;
+  margin: 1em 0 0 0;
+}
+
+main h2 {
+  color: white;
+  font-weight: normal;
+}
+
+main h3 {
+  color: white;
+}
+
+main h4, main h5, main h6 {
+  color: white;
+  font-weight: bold;
+  font-size: 1em;
+  font-style: italic;
+}
+
+p, ul, ol, dl, th, td {
   line-height: 1.5em;
 }
 
-#nav li a:active, #nav li a:hover {
-  border-style: inset;
-  color: #cca9dc;
+p.meta {
+  font-size: 0.85em;
+  font-style: italic;
+  color: #ccc;
+  margin-top: 0;
 }
 
-#content {
-  padding: 1em 2em;
-
-  font-family: sans-serif;
-
-  background: #fff;
-  border-left: 1px solid dimgray;
-  border-right: 1px solid dimgray;
-  border-bottom: 1px solid dimgray;
+p.meta a {
+  color: #ccc;
 }
 
-#content h1 {
-  font-size: 1.8em;
-  line-height: 1.3em;
-  font-family: "Georgia", "Times New Roman"," Times", serif;
-  font-weight: normal;
-  border-bottom: 1px solid #c9c9c9;
-  padding: 0;
-  margin: 0 0 0.25em 0;
+#markdown-toc {
+  background-color: black;
+  display: inline-block;
+  line-height: 1.5em;
+  padding: 0.6em 2em 1em 2em;
+  margin-left: 2em;
+
+  border: 1px solid slategray;
+
+  max-height: 10em;
+  overflow: auto;
 }
 
-#content h2 {
-  font-size: 1.5em;
-  line-height: 1.3em;
-  font-family: "Georgia", "Times New Roman"," Times", serif;
-  font-weight: normal;
-  border-bottom: 1px solid #c9c9c9;
-  padding: 0;
-  margin: 1em 0 0.25em 0;
+#markdown-toc, #markdown-toc ol {
+  list-style: square;
+  list-style-position: inside;
 }
 
-#content h3 {
-  font-size: 1.2em;
+#markdown-toc>li:first-child {
+  padding-top: 0.5em;
+  margin-top: 0.5em;
+  border-top: 1px solid lightsteelblue;
+}
+
+#markdown-toc:before {
+  color: lightsteelblue;
   font-weight: bold;
-  padding: 0.5em 0 0 0;
-  margin: 0.3em 0 0 0;
+  content: "Table of Contents";
+  font-variant: small-caps;
 }
 
-#content h4 {
-  font-size: 1em;
-  font-weight: bold;
+#markdown-toc.thin {}
+#markdown-toc.wide {}
+
+main code {
+  font-size: 16px;
+  background: black;
+  padding: 0 0.4em;
+  color: #0c0;
+}
+
+main pre {
+  font-size: 16px;
+  background: black;
+  padding: 1em;
+  color: #0c0;
+}
+
+main pre code {
   padding: 0;
-  margin: 0.3em 0 0 0;
+  background: transparent;
 }
 
-#content h5 {
-  font-size: 1em;
-  font-weight: bold;
-  padding: 0;
-  margin: 0.3em 0 0 0;
-
-  color: darkgray;
+main blockquote {
+  padding-left: 2em;
+  margin-left: 0;
+  color: #bababa;
+  border-left: 6px solid #ccc;
 }
 
-#content h6 {
-  font-size: 1em;
-  font-weight: bold;
-  padding: 0;
-  margin: 0.3em 0 0 0;
-
-  color: #c0fefe;
-}
-
-#content p, #content li, #content dl, #content table, #content pre {
-  /*font-size: 0.875em;*/
-  /*font-size: 1em;*/
-  line-height: 160%;
-  margin: 0.5em 0;
-  padding: 0;
-}
-
-#content blockquote {
-  border-left: 0.4em solid gainsboro;
-  padding-left: 1em;
-  margin-left: 1em;
-}
-
-#content li {
-  margin: 0;
-}
-
-#content li li {
-  font-size: 1em;
-}
-
-#content blockquote {
-}
-
-#content table {
+table {
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
-
-  background-color: #fff;
+  overflow: auto;
 }
 
-#content th {
-  background-color: gainsboro;
+table tr {
 }
 
-#content th, #content td {
-  border: 1px solid darkgray;
-  padding: 0.2em 0.5em;
+table th, table td {
   font-size: 0.875em;
+  border: 1px solid #446;
+  padding: 0.5em 0.5em;
 }
 
-#content dt {
+table th {
+  background-color: #335;
+}
+
+dt {
   font-weight: bold;
 }
 
-#content a, #footer a {
-  color: #000088;
-}
-
-#content a[href^="http://"]{
-  color: #000044;
-}
-
-#content a:visited,
-#content a[href^="http://"]:visited{
-  color: #880088;
-}
-
-code {
-  font-size: 1.2em;
-  background: gainsboro;
-}
-
-#content pre {
-  border: 1px solid darkgray;
-  padding: 0.5em;
-  background: antiquewhite;
-}
-
-#markdown-toc {
-  font-size: 0.875em;
-  border: 1px solid darkgray;
-  border-top-width: 0.5em;
-  background: aliceblue;
-  padding: 0.5em 1em 1em 2.5em;
-}
-  
-#markdown-toc {
-  float: right;
-  margin-left: 1em;
-}
-
-#markdown-toc.thin {
-  float: right;
-  margin-left: 1em;
-}
-
-#markdown-toc.wide {
-  float: unset;
-  margin-left: 0;
-}
-
-#markdown-toc li {
-  margin: 0;
-}
-
-#markdown-toc li ol, #markdown-toc li ul {
-  padding-left: 2.5em;
-}
-
-
-#footer {
-  margin-bottom: 2em;
-
-  padding: 2em;
-  font-family: sans-serif;
-
-  overflow: hidden;
-}
-
-#footer p, #footer li {
-  font-size: 0.875em;
-  line-height: 160%;
-  margin: 0.5em 0;
-  padding: 0;
-}
-
-.hitcounter {
-  display: block;
-  float: right;
+main a[href^="http://"] {
+  text-decoration: line-through;
+  color: #bababa;
 }
 
 /* accessibility */
-
 img:not([alt]) {
   border: 1px dashed #c00;
+}
+
+footer {
+  padding: 2em 0 5em 0;
+}
+
+footer ul li:first-child {
+  text-align: left;
+}
+
+footer ul li:last-child {
+  text-align: right;
 }
