--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@ Posted
 </li>
 
 {% if site.hitcounterid %}
-        <li><img src="https://www.free-website-hit-counter.com/c.php?d=8&id={{ site.hitcounterid }}}&s=16" title="free website hit counter" class="hitcounter" alt="hitcounter"></li>
+        <li><img src="https://www.free-website-hit-counter.com/c.php?d=8&id={{ site.hitcounterid }}&s=16" title="free website hit counter" class="hitcounter" alt="hitcounter"></li>
 {% endif %}
       </ul>
     </footer>
