--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,6 @@
     </header>
     <main>
 
-{% comment %}
-
 {% if page.title %}<h1>{{ page.title | default: Untitled }}</h1>{% endif %}
 
 {% if page.date %}
@@ -45,14 +43,12 @@ Posted
   in <a href="opinion/">Opinion</a>
   {% when "etc" %}
   in <a href="etc/">Etc</a>
-  {% else %}
 {% endcase %}
-{% if page.date %} on {{ page.date | date: "%Y-%m-%d }} {% endif %}
-{% if page.updated %} &mdash; last updated {{ page.updated | date: %Y-%m-%d }} {% endif %}
+{% if page.date %} on {{ page.date | date: "%Y-%m-%d" }} {% endif %}
+{% if page.updated %} &mdash; last updated {{ page.updated | date: "%Y-%m-%d" }} {% endif %}
 </p>
 {% endif %}
 
-{% endcomment %}
 
 {{ content }}
 
