--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -7,9 +7,11 @@ layout: default
 
 <ul>
 {% for post in site.posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a>
-  {% if post.updated %}&mdash; Updated: {{ post.updated | date: %Y-%m-%d }}
-  {% else %}&mdash; {{ post.date | date: %Y-%m-%d }}
+  {%if post.category in page.category %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a>
+    {% if post.updated %}&mdash; Updated: {{ post.updated | date: "%Y-%m-%d" }}
+    {% else %}&mdash; {{ post.date | date: "%Y-%m-%d" }}
+    {% endif %}
   {% endif %}
 {% endfor %}
 </ul>
