--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,6 @@ Posted
 </p>
 {% endif %}
 
-
 {{ content }}
 
     </main>
@@ -68,6 +67,7 @@ Posted
     &copy; {{ page.date | date: %Y}}{% if page.updated %}&ndash;{{ page.updated | date: %Y }} {% endif %} {{site.author}}
   {% when "CC0" %}
 <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 Public Domain</a>
+  {% when "none" %}
 {% endcase %}
 </li>
 
