--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header h1 {
   height: 64px;
   line-height: 64px;
 
-  background: url(../orbital-64px.png) no-repeat transparent;
+  background: url(../img/orbital-64px.png) no-repeat transparent;
 }
 
 header h1 a {
