--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,13 +1,14 @@
 ---
 title: category layout
 layout: default
+license: none
 ---
 
 {{ content }}
 
 <ul>
 {% for post in site.posts %}
-  {%if post.category in page.category %}
+  {% if post.category == page.category %}
     <li><a href="{{ post.url }}">{{ post.title }}</a>
     {% if post.updated %}&mdash; Updated: {{ post.updated | date: "%Y-%m-%d" }}
     {% else %}&mdash; {{ post.date | date: "%Y-%m-%d" }}
