--- a/style.css
+++ b/style.css
@@ -233,8 +233,7 @@ dt {
 }
 
 main a[href^="http://"] {
-  text-decoration: line-through;
-  color: #bababa;
+  text-decoration: none;
 }
 
 /* accessibility */
