--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -10,8 +10,8 @@ license: none
 {% for post in site.posts %}
   {% if post.category == page.category %}
     <li><a href="{{ post.url }}">{{ post.title }}</a>
-    {% if post.updated %}&mdash; Updated: {{ post.updated | date: "%Y-%m-%d" }}
-    {% else %}&mdash; {{ post.date | date: "%Y-%m-%d" }}
+    {% if post.updated %}&mdash; Updated: <time>{{ post.updated | date: "%Y-%m-%d" }}</time>
+    {% else %}&mdash; <time>{{ post.date | date: "%Y-%m-%d" }}</time>
     {% endif %}
   {% endif %}
 {% endfor %}
