--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
           <li><a href="{{ "/games/" | absolute_url }}" title="Articles on video games">Games</a></li>
           <li><a href="{{ "/rpg/" | absolute_url }}" title="Articles on tabletop roleplaying games">RPGs</a></li>
           <li><a href="{{ "/tv/" | absolute_url }}" title="Articles on television">TV</a></li>
-          <li><a href="{{ "/opinion/" | absolute_url }}" title="Opinion">Opinion</a></li>
+          <li><a href="{{ "/opinion/" | absolute_url }}" title="Opinion articles">Opinion</a></li>
           <li><a href="{{ "/etc/" | absolute_url }}" title="Other pages">Etc</a></li>
         </ul>
       </nav>
