--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,16 +6,18 @@ license: none
 
 {{ content }}
 
-<ul class="article-list">
-{% for post in site.posts %}
+<table class="index">
+{% for post in site.posts  %}
   {% if post.category == page.category %}
-
-<!--    <li><span class="cat-emoji" title="{{post.category}}">{{site.category_emoji[post.category]}}</span> -->
-    <a href="{{ post.url }}">{{ post.title }}</a>
-    {% if post.updated %}&mdash; Updated: <time>{{ post.updated | date: "%Y-%m-%d" }}</time>
-    {% else %}&mdash; <time>{{ post.date | date: "%Y-%m-%d" }}</time>
-    {% endif %}
+<tr>
+  <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
+</td>
+  <td class="index-date">
+  {% if post.updated %}<time title="Posted {{ post.date | date: "%A, %d %B %Y" }}. Updated {{ post.updated | date: "%A, %-d %B %Y" }}">{{ post.updated | date: "%Y-%m-%d" }}&ast;</time>
+  {% else %}<time title="Posted {{ post.date | date: "%A, %-d %B %Y" }}">{{ post.date | date: "%Y-%m-%d" }}</time>
+  {% endif %}
+</td>
+</tr>
   {% endif %}
 {% endfor %}
-</ul>
-
+</table>
