--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,8 +15,8 @@ license: none
   <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
 </td>
   <td class="index-date">
-  {% if post.updated %}<time>{{ post.updated | date: "%Y-%m-%d" }}<span title="Updated">&ast;</span></time>
-  {% else %}<time>{{ post.date | date: "%Y-%m-%d" }}</time>
+  {% if post.updated %}<time title="Posted {{ post.date | date: "%A, %d %B %Y" }}. Updated {{ post.updated | date: "%A, %-d %B %Y" }}">{{ post.updated | date: "%Y-%m-%d" }}&ast;</time>
+  {% else %}<time title="Posted {{ post.date | date: "%A, %-d %B %Y" }}">{{ post.date | date: "%Y-%m-%d" }}</time>
   {% endif %}
 </td>
 </tr>
