--- a/style.css
+++ b/style.css
@@ -255,6 +255,11 @@ table.index {
   width: 100%;
 }
 
+table.index td {
+  border-width: 0;
+  font-size: unset;
+}
+
 td.index-cat {
   text-align: right;
 }
