--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,7 +13,7 @@ license: none
 <tr>
   <td class="index-cat"><a href="{{ post.category | absolute_url }}">{{post.category}}/</a></td>
   <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
-  {% for tag site.tags %}
+  {% for tag in site.tags %}
     {% if tag=="hot"%}
       (hot!)
     {% endif %}
