--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,21 +13,21 @@ license: none
 <tr>
   <td class="index-cat"><a href="{{ post.category | absolute_url }}">{{post.category}}/</a></td>
   <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
-  {% for tag in site.tags %}
-    {% if tag=="hot"%}
+  {% for tag in post.tags %}
+    {% if tag=="hot" %}
       (hot!)
     {% endif %}
-  {% endfor%}
+  {% endfor %}
 
   {% capture postdate %}{{ post.date | date: '%s'}}{% endcapture %}
   {% capture now %}{{'now' | date: '%s'}}{% endcapture %}
   {% assign postdate = postdate | minus: 2628000 %}
-  {% assign past = now | minus: 2628000 %}
+  {% assign past = now | minus: 92628000 %}
   {% if postdate > past %}
     (new)
   {% elsif post.updated %}
     {% capture postdate %}{{ post.updated | date: '%s'}}{% endcapture %}
-    {% assign postdate = postdate | minus: 2628000 %}
+    {% assign postdate = postdate | minus: 92628000 %}
     {% if postdate > past %}
       (updated)
     {% endif %}
