--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,21 +15,21 @@ license: none
   <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
   {% for tag in post.tags %}
     {% if tag=="hot" %}
-      (hot!)
+      <img src="{{ "img/hot.gif" | absolute_url }}" alt="Hot!">
     {% endif %}
   {% endfor %}
 
   {% capture postdate %}{{ post.date | date: '%s'}}{% endcapture %}
   {% capture now %}{{'now' | date: '%s'}}{% endcapture %}
   {% assign postdate = postdate | plus: 0 %}
-  {% assign past = now | minus: 94608000 %}<!-- 2628000 -->
+  {% assign past = now | minus: 2628000 %}
   {% if postdate > past %}
-    (new)
+    <img src="{{ "img/new.gif" | absolute_url }}" alt="New!">
   {% elsif post.updated %}
     {% capture postdate %}{{ post.updated | date: '%s'}}{% endcapture %}
     {% assign postdate = postdate | plus: 0 %}
     {% if postdate > past %}
-      (updated)
+      <img src="{{ "img/updated.gif" | absolute_url }}" alt="Updated">
     {% endif %}
   {% endif %}
 
