--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,10 +8,12 @@ license: none
 
 <h2>Index</h2>
 
+<p>The following is a list of articles on this site. A few particularly interesting articles (arbitrarily decided) are tagged "hot," and articles posted or updated in the last month or so are also tagged.</p>
+
 <table class="index">
 {% for post in site.posts  %}
 <tr>
-  <td class="index-cat"><a href="{{ post.category | absolute_url }}">{{post.category}}/</a></td>
+  <td class="index-cat"><a href="{{ post.category | absolute_url }}/">{{post.category}}/</a></td>
   <td class="index-link"><a href="{{post.url}}">{{post.title}}</a>
   {% for tag in post.tags %}
     {% if tag=="hot" %}
