Testing theme changes

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -21,6 +21,11 @@ license: none
 {% endfor %}
 </table>
 
+{% comment %}
+
+
+
+
 <table class="index">
 {% for post in site.posts  %}
   {% if post.category == page.category %}
@@ -57,3 +62,6 @@ license: none
   {% endif %}
 {% endfor %}
 </table>
+
+
+{% endcomment %}
